# PROYECTO_PROGRA_B2_Majo_Leo

./: .gitignore  CMakeLists.txt  README.md  dialog.cpp  dialog.ui  jugador.h  jugadorrepository.h  mainwindow.ui
Cpp/: jugadorrepository.cpp  login.cpp  main.cpp  mainwindow.cpp
Headers/: dialog.h  login.h  mainwindow.h
Proyecto-b2/: CMakeLists.txt  mainwindow.ui
Ui/: login.ui  mainwindow.ui
